Enhance Contact component styling: Update Select component with custom styles and transition effects for improved user experience. Add custom class for dropdown options in SCSS to ensure consistent design. Update Hero component text and adjust responsive styles for better layout on smaller screens.

--- a/src/components/organisms/Contact/Contact.scss
+++ b/src/components/organisms/Contact/Contact.scss
@@ -172,3 +172,10 @@
     }
   }
 }
+
+.custom-contact-select-option {
+  min-height: 50px !important;
+  display: flex !important;
+  align-items: center !important;
+  font-size: 16px !important;
+}
