--- a/src/components/organisms/Hero/Hero.scss
+++ b/src/components/organisms/Hero/Hero.scss
@@ -408,3 +408,9 @@
     opacity: 0.8;
   }
 }
+
+@media (max-width: 768px) {
+  .hero__image-container {
+    top: 40px;
+  }
+}
